feat: simplify run creation and deletion
